--- a/style_index.css
+++ b/style_index.css
@@ -14,16 +14,16 @@
     width: 64px;
     height: 64px;
     margin-left: 5%;
+    margin-bottom: 5px;
     border-radius: 50%;
     transition: 0.5s;
 }
 
 #image_logo:hover {
-    box-shadow: 0 5px 15px black;
+    box-shadow: 0 5px 20px black;
 }
 
 #kaiken {
-    margin-left: 4.5%;
     transition: 0.5s;
 }
 
